deploy_api/registry/job-recommend/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: job-recommend-stripprefix
  namespace: development
spec:
  stripPrefix:
    prefixes:
      - /api/job-recommend
