deploy_api/registry/job-recommend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: job-recommend-service
  namespace: development
spec:
  selector:
    app: job-recommend-deployment
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
