deploy_api/registry/job-recommend/ingressroute.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: job-recommend-ingress
  namespace: development
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: development-job-recommend-stripprefix@kubernetescrd
spec:
  rules:
    - host: "ethi-team.pw"
      http:
        paths:
          - pathType: Prefix
            path: "/api/job-recommend"
            backend:
              service:
                name: job-recommend-service
                port:
                  number: 8001

  tls:
    - hosts:
        - "ethi-team.pw"
      secretName: domain-ingress-tls
